--- a/styles.css
+++ b/styles.css
@@ -29,3 +29,28 @@ button {
         border: none;
         padding: 4px;
 }
+
+form {
+    margin: 10px 0;
+    min-width: 200px;
+    width: fit-content;
+    min-height: 80px;
+    word-break: break-word;
+    padding: 15px;
+    border: 5px solid var(--orange);
+    font-size: 2rem;
+    text-align: center;
+}
+
+fieldset {
+  border: none;
+}
+
+input {
+  margin: 10px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
