--- a/styles.css
+++ b/styles.css
@@ -24,29 +24,37 @@ body {
 }
 
 button {
-        background-color: var(--orange);
-        cursor: pointer;
-        border: none;
-        padding: 4px;
+  cursor: pointer;
+  margin-top: 15px;
+  text-decoration: none;
+  background-image: linear-gradient(#fecc4c, #ffac33);
+  border: 3px solid #feac32;
+  padding: 10px 16px;
+  font-size: 23px;
+  width: 100%;
 }
 
 .container {
-    margin: 10px 0;
-    min-width: 200px;
-    width: fit-content;
-    min-height: 80px;
-    word-break: break-word;
-    padding: 15px;
-    border: 5px solid var(--orange);
-    font-size: 2rem;
-    text-align: center;
+  margin: 10px 0;
+  min-width: 200px;
+  width: fit-content;
+  min-height: 80px;
+  word-break: break-word;
+  padding: 15px;
+  border: 5px solid lightgray;
+  font-size: 2rem;
+  text-align: center;
 }
 
 input {
+  display: block;
+  font-size: 2.5rem;
+  width: 100%;
+  height: 60px;
+  padding: 6px 12px;
   margin: 10px 0;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  justify-content: center;
-  align-items: center;
+  line-height: 1.4;
+  color: white;
+  background-color: #0a0a23;
+  border: 1px solid lightgray;
 }
