--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ button {
 }
 
 .container {
+  background-color: rgba(211, 211, 211, 0.185);
   margin: 10px 0;
   min-width: 200px;
   width: fit-content;
@@ -57,4 +58,18 @@ input {
   color: white;
   background-color: #0a0a23;
   border: 1px solid lightgray;
+}
+
+#output {
+  color: white;
+    background-color: rgba(211, 211, 211, 0.185);
+    border: 3px solid lightgray;
+    font-size: 2.5rem;
+    width: 90%;
+    max-width: 500px;
+    min-height: 55px;
+    margin-top: 25px;
+    padding: 15px;
+    overflow-wrap: break-word;
+    text-align: center;
 }
